<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_listado_reporte"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.listviewpersonalizado.ListadoReporte">

    <TextView
        android:text="@string/listado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView5"
        android:id="@+id/tblReporte"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" />

            <TextView
                android:text="@string/placa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" />

            <TextView
                android:text="@string/marca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8" />

            <TextView
                android:text="@string/modelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9" />

            <TextView
                android:text="@string/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" />

            <TextView
                android:text="@string/precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
